--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -1462,7 +1462,7 @@ Vue.component('child',{
 
 
 
-# 面试题整理（主要是css）
+# 第一场面试题整理（主要是css）
 
 
 
@@ -1485,7 +1485,7 @@ Vue.component('child',{
 
 详解：
 
-### 1.app适配怎么写？使用的单位是什么？（rem）
+### 38.app适配怎么写？使用的单位是什么？（rem）
 
 解答：①**视口`viewPort`适配**，PC和手机屏幕不匹配的问题。
 
@@ -1891,7 +1891,7 @@ console.log(origin);
 
 
 
-### 吉利面试题
+# 吉利面试题
 
 1. html5的标签有哪些？
 2. css中的定位有哪些？想要子盒子在父盒子中居右侧怎么做？
@@ -1905,7 +1905,7 @@ console.log(origin);
 
 
 
-### 笔试后的面试
+# 笔试后的面试
 
 1. 学过哪些基础框架？
 2. vue源码了解过吗？怎么实现数据的劫持？
@@ -1921,14 +1921,14 @@ console.log(origin);
 
 
 
-### B站站友分享题目
+# B站站友分享题目
 
 1. vue组件中data为什么是函数？
 2. vue-cli如何使用json数据模拟？
 
 
 
-### 海康电话面试
+# 海康电话面试
 
 1. js有哪些基本数据类型
 2. 深拷贝和浅拷贝的区别？怎么实现深拷贝
@@ -1940,7 +1940,7 @@ console.log(origin);
 8. 简要说明v-if和v-show的区别
 9. 父子组件、兄弟组件分别怎么传值的？
 
-### 海康电话面试后的现场面试
+# 海康电话面试后的现场面试
 
 1. HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
 2. ES6中的Promise方法，有两个参数，分别代表什么（记不清了，引到for in）
@@ -1959,7 +1959,7 @@ console.log(origin);
 
 
 
-### 宇视笔试题
+# 宇视笔试题
 
 1. 在js的浏览器对象模型中，window对象的（）属性是用来指定浏览器状态栏里面的临时消息
 
@@ -1993,7 +1993,7 @@ console.log(origin);
 
     
 
-### 宇视笔试后的电话面试
+# 宇视笔试后的电话面试
 
 1. vue生命周期有哪些
 2. v-if和v-show有什么区别
@@ -2005,7 +2005,7 @@ console.log(origin);
 
 
 
-### B站站友分享的题目
+# B站站友分享的题目
 
 1. 学校里的情况简介，对前端的理解，学习前端的途径，后端语言的了解成都
 
@@ -2027,7 +2027,7 @@ console.log(origin);
 
    
 
-### 小伙伴分享的面试题
+# 小伙伴分享的面试题
 
 1. 为什么选择`vue+element`这样一个体系搭建系统？有什么吗优点？
 2. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
@@ -2036,3 +2036,18 @@ console.log(origin);
 
  
 
+## 吉利秋招提前批
+
+1.原型链有了解么？
+2.vue的生命周期写一下？每个阶段代表的意思说一下？
+3.虚拟DOM说一下？在生命周期里的对应阶段？
+4.用的前端组件是什么？（然后问了一个我不知道的，我忘记是啥了）
+5.画一下项目的界面结构并且简单介绍下项目
+6.问了一下我那个通讯录界面的布局
+7.验证码有写过没
+8.npm有学过除简单命令之外的服务构建么？
+9.说一下webpack的配置问题
+10.echarts有用过么？WebGL知道么？
+11.session和cookies有用过么？简单说一下使用
+12.数据结构了解多少？数据库呢？
+13.es6怎么声明类？继承怎么写？提出是为了解决什么问题？
