--- a/_posts/2019-07-31-微信小程序的学习.md
+++ b/_posts/2019-07-31-微信小程序的学习.md
@@ -730,9 +730,7 @@ module.exports = {
 }
 ```
 
-然后在要使用的页面中，打开index.js 进行变量声明
-
-
+然后在要使用的页面中，打开`index.js `进行变量声明
 
 ```javascript
 data:{
@@ -748,5 +746,35 @@ var time = require('../../utils/util.js');
 that.setData({
      createTime:time.timeFormatTime(ss, 'Y/M/D')
 })
+```
+
+### 16.`picker`使用无效问题解决
+
+```html
+		<picker value="{{idx}}" range="{{pickers}}" bindchange="PickerChange">
+            <view>
+                {{idx?pickers[idx]:'请选择物品类型'}}{{}}
+            </view>
+        </picker>
+```
+
+其中，`idx`、`pickers`分别定义在data中
+
+```javascript
+    pickers: ['钥匙', '饭卡', '手机', '钱包', '门'],
+    editCate: '',
+    idx: 0,
+```
+
+选择变化的时候出发的方法定义如下
+
+```javascript
+	/* 这里一定要写idx的值的设置，否则就会出现选上了，但是不能显示选上的值 */
+PickerChange(e) {
+    this.editCate = e.detail.value;
+    this.setData({
+      idx: e.detail.value
+    })
+  	},
 ```
 
