整理之前实习经验
整理之前实习经验

--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -1050,6 +1050,8 @@ const使用场景很广，包括常量、配置项以及引用的组件、定义
 
 一个闭包就是**一个没有释放资源的栈区**，栈区内的变量处于激活状态。
 
+闭包：当外部函数返回之后，内部函数可以访问外部函数的属性或者方法。（站友提供的说法）
+
 在ES6中let实际是为js新增了块级作用域。
 
 let声明的变量可以绑定在作用域中。
@@ -1538,7 +1540,9 @@ Vue.component('child',{
 
 ### 3.用Ajax的时候，get和post有什么区别？
 
-​			GET和POST都是HTTP协议中的两种发送请求的办法，都是基于TCP/IP。
+​	GET和POST都是HTTP协议中的两种发送请求的办法，都是基于TCP/IP。
+
+​	get 和post 安全等级是同级别的，不要说安全区别，都不安全，get有数据缓存的问题，清缓存query需要加时间戳，post就不会有这个问题。（站友分享思路）
 
 | GET                                    | POST                               |
 | -------------------------------------- | ---------------------------------- |
@@ -1973,6 +1977,8 @@ console.log(origin);
 
 6. attachEvent可以删除DOM对象的监听事件吗
 
+   ` attachEvent`绑定的事件，如果需要注销，应该使用`detachEvent`
+
 7. 通过new Date（）可以获取当前PC本地时间吗？
 
 8. form标签对之间，可以出现p、ul等非表单域元素吗
@@ -2036,14 +2042,14 @@ console.log(origin);
 
  
 
-## 吉利秋招提前批
+# 吉利秋招提前批
 
 1.原型链有了解么？
 2.vue的生命周期写一下？每个阶段代表的意思说一下？
 3.虚拟DOM说一下？在生命周期里的对应阶段？
-4.用的前端组件是什么？（然后问了一个我不知道的，我忘记是啥了）
+4.用的前端组件是什么？
 5.画一下项目的界面结构并且简单介绍下项目
-6.问了一下我那个通讯录界面的布局
+6.问了一下通讯录界面的布局
 7.验证码有写过没
 8.npm有学过除简单命令之外的服务构建么？
 9.说一下webpack的配置问题
@@ -2051,3 +2057,26 @@ console.log(origin);
 11.session和cookies有用过么？简单说一下使用
 12.数据结构了解多少？数据库呢？
 13.es6怎么声明类？继承怎么写？提出是为了解决什么问题？
+
+
+
+# 吉利秋招提前批
+
+1.为什么跨专业做前端，了解了一下课题，问了下有没有用过C++
+
+2.学习前端的路径方式是什么：视频、书、码代码
+
+3.实习多久？在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
+
+4.评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
+
+5.js中的闭包了解吗？有什么好处和缺点：讲到了执行机制，一直放在作用域里面，占内存
+
+6.怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
+
+7.react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
+
+8.数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
+
+9.PS的使用？webpack了解吗？git使用情况？
+
